--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,14 @@
----
-layout: default
----
+ {% include header.html %}
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+    <!-- Post Content -->
+ <article>
+     
+ 
+        
+                    {{ content }} 
+ </article>
 
-  <div class="entry">
-    {{ content }}
-  </div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
-  {% include disqus.html %}
-</article>
+</div>
+    <!-- Footer -->
+     {% include footer.html %}
