--- a/_includes/header.html
+++ b/_includes/header.html
@@ -85,7 +85,7 @@
 		}
 		.avatar img:hover {
 			border: 5px solid darkblue;
-			transition: 0.9s;
+        /*transition: 0.9s;*/
 		}
 		a {
 			text-decoration: none;
