--- a/_includes/header.html
+++ b/_includes/header.html
@@ -147,6 +147,9 @@
 			display: block;
 
 		}
+      article img {
+        margin-right: 10px;
+      }
 		.post-meta {
 			margin-top: 30px;
 			font-family: Helvetica;
