--- a/_includes/header.html
+++ b/_includes/header.html
@@ -148,7 +148,7 @@
 
 		}
       article img {
-        margin-right: 10px;
+        margin-left: -10px;
       }
 		.post-meta {
 			margin-top: 30px;
