--- a/_includes/header.html
+++ b/_includes/header.html
@@ -138,13 +138,13 @@
 			color: rgba(102, 102, 102, 1);
 		}
 		article {
-			/*margin: 0 auto;*/
+			margin: 0 auto;
 			padding: 20px;
 			max-width: 800px;
 			margin-top: 20px;
-			display: inline-block;
+        /*display: inline-block;*/
 			margin-left: 45px;
-			display: block;
+        /*display: block;*/
 
       }
 		.post-meta {
