--- a/_includes/header.html
+++ b/_includes/header.html
@@ -145,8 +145,8 @@
         /*display: inline-block;*/
 			margin-left: 45px;
         /*display: block;*/
-
-      }
+        		font-family: Georgia;
+		}
 		.post-meta {
 			margin-top: 30px;
 			font-family: Helvetica;
